# wheat_analysis_capstone

./: Dockerfile  LICENSE  Makefile  README.md  config_mobilenet100.yaml  config_regnety.yaml  config_resnet10.yaml  config_resnet10_final.yaml  config_resnet10_raw.yaml  config_resnet18.yaml  config_resnet50.yaml  data_loader.py  evaluate_model.py  grain_prediction_service.py  notebook.ipynb  notebook_timm.ipynb  pyproject.toml  resnet10_final.onnx  setup_env.sh  setup_train_val_split.sh  test_list.json  test_predict.py  test_prediction_service.py  train.py  train_final_model.sh  train_mobilenet_model.sh  train_regnet_model.sh  train_resnet10_model.sh  train_resnet18_model.sh  train_resnet_models.sh  training_config.py  utils.py
checkpoints/: README.md  mobilenetv3_large_100.ra_in1k_checkpoint_10.pt  regnety_008_tv.tv2_in1k_checkpoint_10.pt  resnet10t_checkpoint_0.pt  resnet10t_checkpoint_10.pt  resnet10t_final.pt  resnet18_checkpoint_10.pt
