[project]
name = "wheat_analysis_capstone"
version = "0.1.0"
description = "Deep learning final project for MLZoomcamp 2025"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "timm>=1.0.24",
    "torch==2.6.0+cpu",
    "torchvision==0.21.0+cpu",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.4.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
