[project]
name = "wheat_analysis_capstone"
version = "0.1.0"
description = "Deep learning final project for MLZoomcamp 2025"
readme = "README.md"
requires-python = ">=3.12.3, <3.13"
dependencies = [
    "fastapi>=0.121.1",
    "grad-cam>=1.5.5",
    "lxml>=6.0.2",
    "onnx>=1.20.1",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.7",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "timm>=1.0.24",
    "torch==2.6.0+cpu",
    "torchinfo>=1.8.0",
    "torchvision==0.21.0+cpu",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.4.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
